<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/form_worklist_imageView"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="0dp"
                android:paddingLeft="5dp"
                android:text="@string/form_worklist_default_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"
                android:textSize="@dimen/fragment_form_worklist_name" />

            <TextView
                android:id="@+id/txtStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:paddingRight="5dp"
                android:text="@string/form_worklist_default_start"
                android:textColor="@color/black"
                android:textSize="@dimen/fragment_text_content" />

            <TextView
                android:id="@+id/txtEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/txtStart"
                android:paddingRight="5dp"
                android:text="@string/form_worklist_default_end"
                android:textColor="@color/black"
                android:textSize="@dimen/fragment_text_content" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/form_worklist_imageView"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/img_form_worklist"
            android:src="@drawable/icon_form_right" />

    </RelativeLayout>

</android.support.v7.widget.CardView>